--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -644,7 +644,7 @@ The \emph{complex constraint} (expressed in DL) is mapped to a \emph{generic con
 		\begin{tabular}{l|l|l|l|l|l|l}
       \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
       \hline
-class & Half-Klingon & - & - & $\neg$E $\sqcap$ F, E $\sqcap$ $\neg$F & $\sqcup$ & - \\
+class & Publication & - & - & $\neg$E $\sqcap$ F, E $\sqcap$ $\neg$F & $\sqcup$ & - \\
 class & $\neg$E $\sqcap$ F & - & - & $\neg$E, F & $\sqcap$ & - \\
 class & E $\sqcap$ $\neg$F & - & - & E, $\neg$F & $\sqcap$ & - \\
 class & $\neg$E & - & - & E & $\neg$ & - \\
